--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -139,10 +139,10 @@
                         <input type="text" class="form-control" id="busquedaInput" placeholder="Escriba el nombre del alumno, apellido, fecha, materia, etc">
                     </div>
                 </div>
-                    <div class="table-container">
-                        <table class="table table-bordered m-1 mb-5" style="background-color: white;">
+                    <div class="table-responsive">
+                        <table class="table table-bordered m-1 mb-5 scrollspy-example"  style="background-color: white;">
                         <thead>
-                        <th scope="col"></th>
+                  
                         <th scope="col" class="col-tabla">Nombre</th>
                         <th scope="col" class="col-tabla">Apellido</th>
                         <th scope="col" class="col-tabla">Email</th>
@@ -163,7 +163,7 @@
                 <div>
                     {% for d in data %}
                     <tr>
-                        <td> {{d.id}}</td>
+           
                         <td>{{d.nombre}}</td>
                         <td>{{d.apellido}}</td>
                         <td>{{d.email}}</td>
@@ -178,26 +178,32 @@
                         <td>{{d.dia}}</td>
                         <td>{{d.horario}}</td>
                         <td>{{d.materia}}</td>
-                        <td class="text-center "> <i class="btn-operacion bi bi-pencil-square "  id="btn-editar{{d.id}}" data-bs-toggle="modal" data-bs-target="#modal{{d.id}}" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar"></i></td>
-                        <td class="text-center"> <a href="{{url_for('eliminar', id=d.id)}}" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar"><i class="btn-operacion bi bi-trash"></i></a></td>
+                        <td class="text-center "> <i class="btn-operacion bi bi-pencil-square "id="#confirmarEliminar{{d.id}}" data-bs-toggle="modal" data-bs-target="#confirmarEliminar{{d.id}}"data-bs-toggle="tooltip" data-bs-placement="top" title="Editar"></i></td>
+                        <td class="text-center">
+                            <!-- Botón para mostrar el modal de confirmación -->
+                                <i class="btn-operacion bi bi bi-trash "id="confirmarEliminar{{d.id}}" data-bs-toggle="modal" data-bs-target="#confirmarEliminar{{d.id}}"data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar"></i></td>                         
+                        </td>
+                       
                         <!-- Modal de confirmación de eliminación para cada alumno -->
-                        <div class="modal fade" id="confirmarEliminar{{d.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Confirmar eliminación</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        ¿Estás seguro de eliminar al alumno {{d.nombre}} {{d.apellido}}?
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn-guardar" style="background-color: #92BD89; color: #ffff;" data-bs-dismiss="modal">Cancelar</button>
-                                        <a href="{{url_for('eliminar', id=d.id)}}" class="btn-guardar">Eliminar</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+<div class="modal fade" id="confirmarEliminar{{d.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Confirmar eliminación</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                ¿Estás seguro de eliminar al alumno {{d.nombre}} {{d.apellido}}?
+            </div>
+            <div class="modal-footer">
+                <!-- Enlace para eliminar el alumno -->
+                <a href="{{url_for('eliminar', id=d.id)}}" class="btn btn-danger">Eliminar</a>
+                <!-- Botón para cerrar el modal -->
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+            </div>
+        </div>
+    </div>
+</div>
                     </tr>
 
                         <!-- MODAL -->
