--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -46,7 +46,7 @@
             </div>
             <div class="col-md-4">
                 <div  class="card p-3" style="width: 16rem; border-radius: 1em;">
-                    <a class="link-home" href="{{ url_for('resumen') }}">
+                    <a class="link-home" href="{{ url_for('caja') }}">
                         <h5 class="card-title">Caja</h5>
                         <img src="static/img/caja.svg" class="card-img-top" alt="...">     
                     </a>
@@ -54,7 +54,7 @@
             </div>
             <div class="col-md-3">
                 <div  class="card p-3" style="width: 16rem; border-radius: 1em;">
-                    <a class="link-home" href="{{ url_for('resumen') }}">
+                    <a class="link-home" href="{{ url_for('agenda') }}">
                         <h5 class="card-title">Agenda</h5>
                         <img src="static/img/calendario.svg" class="card-img-top" alt="...">     
                     </a>
@@ -62,7 +62,7 @@
             </div>
             <div class="col-md-3">
                 <div  class="card p-3" style="width: 16rem; border-radius: 1em;">
-                    <a class="link-home" href="{{ url_for('resumen') }}">
+                    <a class="link-home" href="{{ url_for('control') }}">
                         <h5 class="card-title">Control de pagos</h5>
                         <img src="static/img/control-pagos.svg" class="card-img-top" alt="...">     
                     </a>
