--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -38,7 +38,22 @@
             <a class="nav-link" href="{{url_for('egresos')}}">
                 Egresos
             </a> 
-        </li>     
+        </li>   
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('resumen')}}">
+                Caja
+            </a> 
+        </li>  
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('agenda')}}">
+                Agenda
+            </a> 
+        </li>  
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('control')}}">
+                Control de pagos
+            </a> 
+        </li>    
         
       </ul>
         {% block content %}
