--- a/src/templates/egresos.html
+++ b/src/templates/egresos.html
@@ -183,6 +183,11 @@
                                                     </div>
                                                 </label>
                                             </div>
+                                            <div class="col-md-3 text-center">
+                                                <div class="btn-container">
+                                                    <button type="submit" class="btn-guardar">Guardar</button>
+                                                <div>
+                                            </div>
                                         </form>
                                     </div>
                                 </div>
