--- a/src/templates/ingresos.html
+++ b/src/templates/ingresos.html
@@ -159,7 +159,12 @@
                                                                     </svg>
                                                                 </div>
                                                             </label>
-                                                        </div>
+                                                        </div>                                                 
+                                                    </div>
+                                                    <div class="col-md-3 text-center">
+                                                        <div class="btn-container">
+                                                            <button type="submit" class="btn-guardar">Guardar</button>
+                                                        <div>
                                                     </div>
                                                 </div>
                                             </div>
